cmake_minimum_required(VERSION 3.9)

project(blib)

set_property(GLOBAL PROPERTY VS_STARTUP_PROJECT blib)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

##### OUTPUT DIRECTORIES #####
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/executable)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/executable)

file(GLOB SOURCES "*.cpp")
file(GLOB HEADERS "*.h")

add_executable(blib ${SOURCES} ${HEADERS} )

set_target_properties(blib PROPERTIES 
	LINKER_LANGUAGE CXX 
	CXX_ISO_COMPLIANT ON 
	CXX_STANDARD 17 
	CXX_STANDARD_REQUIRED ON 
	VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")